@@ -13,60 +13,56 @@ import javax.swing.UIManager;
 import javax.swing.UnsupportedLookAndFeelException;
 
 public class Main {
-    public Main() {
-        Main lIIlIIlIllIIlI;
-    }
-
-    public static void openUrl(String lIIlIIlIIllIIl) {
-        String lIIlIIlIIllIII = System.getProperty("os.name").toLowerCase();
+    public static void openUrl(String string) {
+        String string2 = System.getProperty("os.name").toLowerCase();
         try {
-            if (lIIlIIlIIllIII.contains("win")) {
+            if (string2.contains("win")) {
                 if (Desktop.getDesktop().isSupported(Desktop.Action.BROWSE)) {
-                    Desktop.getDesktop().browse(new URI(lIIlIIlIIllIIl));
+                    Desktop.getDesktop().browse(new URI(string));
                 }
-            } else if (lIIlIIlIIllIII.contains("mac")) {
-                Runtime.getRuntime().exec(String.valueOf(new StringBuilder().append("open ").append(lIIlIIlIIllIIl)));
-            } else if (lIIlIIlIIllIII.contains("nix") || lIIlIIlIIllIII.contains("nux")) {
-                Runtime.getRuntime().exec(String.valueOf(new StringBuilder().append("xdg-open ").append(lIIlIIlIIllIIl)));
+            } else if (string2.contains("mac")) {
+                Runtime.getRuntime().exec(String.valueOf(new StringBuilder().append("open ").append(string)));
+            } else if (string2.contains("nix") || string2.contains("nux")) {
+                Runtime.getRuntime().exec(String.valueOf(new StringBuilder().append("xdg-open ").append(string)));
             }
         }
-        catch (IOException | URISyntaxException lIIlIIlIIllIlI) {
-            lIIlIIlIIllIlI.printStackTrace();
+        catch (IOException | URISyntaxException exception) {
+            exception.printStackTrace();
         }
     }
 
-    public static void main(String[] lIIlIIlIlIIlII) {
+    public static void main(String[] arrstring) {
         try {
             UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
         }
-        catch (ClassNotFoundException | IllegalAccessException | InstantiationException | UnsupportedLookAndFeelException lIIlIIlIlIlIll) {
-            lIIlIIlIlIlIll.printStackTrace();
+        catch (ClassNotFoundException | IllegalAccessException | InstantiationException | UnsupportedLookAndFeelException exception) {
+            exception.printStackTrace();
         }
-        int lIIlIIlIlIIIll = JOptionPane.showOptionDialog(null, "To install Meteor Client you need to put it in your mods folder and run Fabric for latest Minecraft version.", "Meteor Client", 1, 0, null, new String[]{"Open Fabric link", "Open mods folder"}, null);
-        if (lIIlIIlIlIIIll == 0) {
+        int n = JOptionPane.showOptionDialog(null, "To install Meteor Client you need to put it in your mods folder and run Fabric for latest Minecraft version.", "Meteor Client", 1, 0, null, new String[]{"Open Fabric link", "Open mods folder"}, null);
+        if (n == 0) {
             Main.openUrl("http://fabricmc.net");
-        } else if (lIIlIIlIlIIIll == 1) {
-            String lIIlIIlIlIIlIl = System.getProperty("os.name").toLowerCase();
+        } else if (n == 1) {
+            String string = System.getProperty("os.name").toLowerCase();
             try {
-                if (lIIlIIlIlIIlIl.contains("win")) {
+                if (string.contains("win")) {
                     if (Desktop.getDesktop().isSupported(Desktop.Action.OPEN)) {
-                        String lIIlIIlIlIlIlI = String.valueOf(new StringBuilder().append(System.getenv("AppData")).append("/.minecraft/mods"));
-                        new File(lIIlIIlIlIlIlI).mkdirs();
-                        Desktop.getDesktop().open(new File(lIIlIIlIlIlIlI));
+                        String string2 = String.valueOf(new StringBuilder().append(System.getenv("AppData")).append("/.minecraft/mods"));
+                        new File(string2).mkdirs();
+                        Desktop.getDesktop().open(new File(string2));
                     }
-                } else if (lIIlIIlIlIIlIl.contains("mac")) {
-                    String lIIlIIlIlIlIIl = String.valueOf(new StringBuilder().append(System.getProperty("user.home")).append("/Library/Application Support/minecraft/mods"));
-                    new File(lIIlIIlIlIlIIl).mkdirs();
-                    ProcessBuilder lIIlIIlIlIlIII = new ProcessBuilder("open", lIIlIIlIlIlIIl);
-                    Process lIIlIIlIIllllI = lIIlIIlIlIlIII.start();
-                } else if (lIIlIIlIlIIlIl.contains("nix") || lIIlIIlIlIIlIl.contains("nux")) {
-                    String lIIlIIlIlIIlll = String.valueOf(new StringBuilder().append(System.getProperty("user.home")).append("/.minecraft"));
-                    new File(lIIlIIlIlIIlll).mkdirs();
-                    Runtime.getRuntime().exec(String.valueOf(new StringBuilder().append("xdg-open \"").append(lIIlIIlIlIIlll).append("\"")));
+                } else if (string.contains("mac")) {
+                    String string3 = String.valueOf(new StringBuilder().append(System.getProperty("user.home")).append("/Library/Application Support/minecraft/mods"));
+                    new File(string3).mkdirs();
+                    ProcessBuilder processBuilder = new ProcessBuilder("open", string3);
+                    Process process = processBuilder.start();
+                } else if (string.contains("nix") || string.contains("nux")) {
+                    String string4 = String.valueOf(new StringBuilder().append(System.getProperty("user.home")).append("/.minecraft"));
+                    new File(string4).mkdirs();
+                    Runtime.getRuntime().exec(String.valueOf(new StringBuilder().append("xdg-open \"").append(string4).append("\"")));
                 }
             }
-            catch (IOException lIIlIIlIlIIllI) {
-                lIIlIIlIlIIllI.printStackTrace();
+            catch (IOException iOException) {
+                iOException.printStackTrace();
             }
         }
     }
